This file contain the log of changes for the main development branch (trunk).
More detailed information for incremental change can be found in the
history management of subversion.

2013-09-12 releases/3.11.4
        - hopefully fixed non-working linear solver loader in DLLs build with
          MSVS/v8-ifort project files [r2365]
        - allow MC19 to be loaded via linear solver loader (by J. Currie) [r2366]
        - fixed new point flag when running dependendency detector [r2368]
        - experimental: adapt Pardiso interface to work with MKL Pardiso
          (by J. Currie, T. Kelman) [r2369, #216]:
          - in a few tests it has been found that Pardiso from Intel MKL nowadays
            seems to work fine with Ipopt
          - to use Intel MKL with Ipopt 3.11, one has to specify the MKL libs via
            --with-pardiso and add -DHAVE_PARDISO_MKL -DHAVE_PARDISO_PARALLEL
            to the compiler flags
          - note that this is still an experimental feature (and thus not enabled
            by default)
        - updated Ipopt/R interface to version 0.8.4 [r2373]
          - additional variables have been included in the object returned from ipoptr:
            z_L : final values for the lower bound multipliers
            z_U : final values for the upper bound multipliers
            constraints : final values for the constraints
            lambda : final values for the Lagrange multipliers
          - removed ipoptr_environment as argument in ipoptr (see also r2372)
        - fixed bug in penalty term for centrality in quality function (not used by
          default) [#219, r2374]
        - minor bugfixes in AMPL interface, debug print statements, and compound matrix
          (by G. Hackebeil) [#218, r2371, r2377, r2378, r2379]
        - download scripts for ASL, Blas, and Lapack now first try to download tarball
          copies from the COIN-OR server

2013-08-08 releases/3.11.3